# GPU-byteplane-analytic

./: .gitignore  README.md  REPO_MANIFEST.md  report.md
benchmarks/experiment0/: CMakeLists.txt  p3d_checksum_timing.cu
benchmarks/experiment1/: bench_contiguous_baseline.cu
benchmarks/experiment3/: CMakeLists.txt  README.md  bench_progressive_aggregation.cu  bench_raw_fp64_sum.cu  exp3_common.cuh  exp3_kernels_extrema.cuh  exp3_kernels_progressive.cuh  exp3_real_data_layout.cpp  exp3_real_data_layout.hpp  export_encoded_dev_layout.cpp
benchmarks/experiment4/: CMakeLists.txt  bench_progressive_filter.cu  bench_raw_fp64_count.cu  bench_threshold_prep_decomp.cu  byteplane_count_gt.cu  byteplane_count_gt.hpp  byteplane_count_gt_batch_cli.cu  byteplane_count_gt_cli.cu  exp4_kernels_filter.cuh  slurm_bench_threshold_prep.sh  transfer_measure.cu
benchmarks/experiment4_filter_aggregate/: CMakeLists.txt  bench_filter_aggregate.cu  bench_graded_nmr.cu  bench_graded_repair.cu  bench_graded_repair_timing.cu  bench_graded_repair_x1.cu  bench_graded_repair_x2.cu  bench_nmr_b_e2e_pipeline.cu  bench_nmr_c_ncu_profile.cu  bench_nmr_c_v2_k_sweep.cu  bench_nmr_overhead.cu  bench_nmr_r0_gpu_smoke.cu  bench_z0_bandwidth_derisk.cu  bench_z0b_bandwidth_derisk.cu  bench_z0d_integrity_derisk.cu  bench_z0e_sum32_sweep.cu  bench_z0f_parallel_sum32.cu  bench_z_ext_digest_sweep.cu  bench_z_g1_gpu_smoke.cu  buff_cpu_proxy.cpp  filter_aggregate_kernels.cuh  nmr_c_v2_kernels.cuh  z0c_crc_probe.cu
benchmarks/reliability_layer1/: CMakeLists.txt  bench_reliability_fixture.cu  bench_reliability_phase2.cu  rl_common.cuh  rl_kernels_fixture.cuh  rl_uint128.cuh
buff_encoder/: README.md  buff_codec.cpp  buff_codec.hpp  buff_error_study.cpp  buff_plane_scan.cpp  buff_tool.cpp
paper/: racs2026_submission_draft_v1.md  racs2026_submission_draft_v1_1.md  workshop_submission_draft_v1.md  workshop_submission_draft_v1_4_zh.md
scripts/: add_artifact_provenance.py  aggregate_exp3_v2_full_sum.py  aggregate_mapseed_sweep.py  aggregate_nmr_c_ncu.py  aggregate_nmr_r11.py  aggregate_phase2b_canonical.py  aggregate_reliability.py  aggregate_reliability_phase1_5.py  aggregate_reliability_phase1_5_combined.py  aggregate_reliability_phase2.py  analyze_byteplane_cudf_pipeline.py  analyze_exp3_v2_minmax_characterization.py  analyze_exp4_b1.py  analyze_exp4_k1_dispatch.py  analyze_nmr_c_v2_fault_rate_sweep.py  analyze_nmr_c_v2_k_policy_frontier.py  analyze_r8_locality.py  analyze_sensitivity.py  analyze_v2_subcolumn_error.py  assemble_w1_baseline.py  assemble_w3_row.py  audit_nosum32_sanity.py  audit_v2_fidelity.py  build_active_delta_global_artifacts.py  build_attribution_from_runs.py  build_exp3_v2_sum_error_bound.py  build_exp4_b1_proxy_table.py  build_phase3x3_pareto.py  build_r10_kdepth_freeze.py  build_real_v2_artifact.py  build_reliability_artifacts.py  build_reliability_tiny_fixture.py  build_scientific_v2_artifact.py  build_tlc_yellow_trip_distance_artifacts.py  build_v2_smoke_artifacts.py  check_cesm_q_threshold_encoding.py  check_exp3_real_artifacts.py  claim2_aggregate.py  claim2_evaluator.py  claim2_fault_suites.py  (+247 more)
scripts/legacy/root_runners/: README.md  run_exp0.sh  run_exp1.sh  run_exp1_baseline.sh  run_exp3.sh  run_exp3_bottleneck_ncu.sh  run_exp3_export_dev.sh  run_exp3_profiler_debug.sh  run_exp3_real_specialized_ab.sh  run_exp3_real_throughput_array.sh  run_exp3_v2_full_throughput_array.sh
spec/: 2026-04-10_H100-H200_混合環境對齊計畫.md  2026-04-10_Instruction-Level_Optimization_for_Progressive_Byte-Plane_Scan_Kernel.md  2026-04-14_Exp3_Progressive_Aggregation.md  2026-04-16_Exp3_Progressive_Aggregation_Rowpack16_Implementation_Spec.md  2026-04-17_Exp1_Contiguous64_Vectorized_Baseline_Spec.md  2026-04-27_Exp3_Real_BuFF_Variable_Plane_Input_Spec.md  2026-04-28_Exp3_Final_Progressive_SUM_Pipeline_Spec.md  2026-04-29_Exp4_Bounded_Precision_Local_Phase1_Spec.md  2026-04-29_Exp4_v1_Progressive_Filter_COUNT_Spec.md  2026-04-30_Exp4-B1_Capped-k_COUNT_Survival_Instrumentation_Spec.md  2026-04-30_Exp4_Capped_k_COUNT_Output_Schema_Contract.md  2026-04-30_Throughput_Metric_Schema_Contract.md  2026-05-04_Raw_FP64_COUNT_Comparator_Spec.md  2026-05-12_Exp4B1_Physical_Traffic_Proxy_Evidence_Spec.md  2026-05-12_Exp6_FOR_Segment_Granularity_Sensitivity_Spec.md  2026-05-12_Mainline_Paper_Evidence_Roadmap_Spec.md  2026-05-12_Mainline_Precision_Throughput_Evidence_Pack_Spec.md  2026-05-12_Raw_vs_Encoded_COUNT_Claim_Table_Spec.md  2026-05-12_cuDF_RAPIDS_Primitive_PerQuery_Gap_Profile_Spec.md  2026-05-12_cuDF_RAPIDS_Primitive_ThresholdPrep_Decomposition_Spec.md  2026-05-21_Representation_Locality_Sensitivity_Spec.md
tests/: test_claim1_policies.py  test_convert_phase1_5_artifacts.py  test_generate_phase1_5_fault_plans.py  test_generate_phase2_fault_plans.py  test_phase2_oracle.py  test_phase2_policy_catalogue.py  test_phase2_vote.py  test_phase3_y0_preflight.py  test_phase3_z1_filtered_evaluator.py  test_phase3_z1b_cb_validation.py  test_phase3_z2_sdc_smoke.py  test_phase3_z2a_parity_smoke.py  test_phase4_nmr_d_claim1.py  test_run_nmr_a_structured_fault.py  test_run_nmr_b_e2e_pipeline.py  test_run_phase2_mechanism_check.py  test_run_phase2_sparse_matrix.py
